[package]
name = "wasm_bindgen_duck_type_macro_impl"
version = "0.1.0"
edition = "2021"
description = "Implementation for wasm_bindgen_duck_type"
homepage = "https://github.com/Graicc/wasm_bindgen_duck_type"
documentation = "https://docs.rs/wasm_bindgen_duck_type_macro_impl"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
